--- a/index.html
+++ b/index.html
@@ -5,8 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio 3</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="space">
+    </div>
+    <div class="contenedor">
+        <div class="box">
+            <article> <!-- Imagen -->
+                <img src="/assets/icon.png" alt="icon" class="img">
+            </article>
+        </div>
+        <div class="box">
+            <article>
+                <h2>Iniciar Sesión</h2>
+            </article>
+        </div>
+        <div class="box">
+            <article>
+                <section>
+                    <input type="email" id="email" placeholder="Email" class="input">
+                </section>
+                <section>
+                    <input type="password" id="pswrd" placeholder="Password" class="input">
+                </section>
+            </article>
+        </div>
+        <nav>
+            <section>
+            <button class="box" id="btn"><b>ENTRAR</b></button>
+            </section>
+            <section class="box">
+                <a href="">Olvidé mi password</a>
+            </section>
+        </nav>
+        <div class="space">
+        </div>
+        <div class="contenedor">
+    </div>  
 </body>
 </html>
