--- a/index.html
+++ b/index.html
@@ -22,14 +22,12 @@
             </article>
         </div>
         <div class="box">
-            <article>
-                <section>
-                    <input type="email" id="email" placeholder="Email" class="input">
-                </section>
-                <section>
-                    <input type="password" id="pswrd" placeholder="Password" class="input">
-                </section>
-            </article>
+           <section>
+                    <form action="">
+                        <input type="email" id="email" placeholder="Email" class="input">
+                        <input type="password" id="pswrd" placeholder="Password" class="input">
+                    </form>
+            </section>
         </div>
         <nav>
             <section>
