--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
            <section>
                     <form action="">
                         <input type="email" id="email" placeholder="Email" class="input">
-                        <input type="password" id="pswrd" placeholder="Password" class="input">
+                        <input type="password" id="pswrd" placeholder="Contraseña" class="input">
+                        <input type="checkbox" name="" id="cbox"> Recordarme
                     </form>
             </section>
         </div>
@@ -34,7 +35,7 @@
             <button class="box" id="btn"><b>ENTRAR</b></button>
             </section>
             <section class="box">
-                <a href="">Olvidé mi password</a>
+                <a href="">Olvidé mi contraseña</a>
             </section>
         </nav>
         <div class="space">
