--- a/index.html
+++ b/index.html
@@ -31,16 +31,25 @@
             </section>
         </div>
         <nav>
+            <div class="nav">
             <section>
             <button class="box" id="btn"><b>ENTRAR</b></button>
             </section>
-            <section class="box">
-                <a href="">Olvidé mi contraseña</a>
+            <section class="box2" id="frgt">
+                <div>
+                <a href="" class="aone">Olvidé mi contraseña</a>
+                </div>
+                <span></span>
+                <div>
+                <a href="" class="atwo">Registrate!</a>
+                </div>
             </section>
+            <span></span>
+            </div>
         </nav>
-        <div class="space">
+
         </div>
-        <div class="contenedor">
     </div>  
+    
 </body>
 </html>
