--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
                 <h2>Iniciar Sesión</h2>
             </article>
         </div>
-        <div class="box">
+        <div class="box" id="bx">
            <section>
                     <form action="">
                         <input type="email" id="email" placeholder="Email" class="input">
                         <input type="password" id="pswrd" placeholder="Contraseña" class="input">
-                        <input type="checkbox" name="" id="cbox"> Recordarme
+                        <input type="checkbox" name="" class="cbox"> Recordarme
                     </form>
             </section>
         </div>
